--- a/js-basics/index.html
+++ b/js-basics/index.html
@@ -28,6 +28,7 @@
 
     <!-- JavaScript can "display" data in different ways -->
     <p id="demo1"></p>
+    <p id="demo2"></p>
     <script>
         //Writing into an HTML element, using innerHTML
         document.getElementById("demo1").innerHTML = "My First JavaScript";
@@ -42,6 +43,8 @@
     </script>
     <!-- function call from external js file-->
     <input type="button" onclick="changeContent()" value="display">
+
+    
     <!--linking external js file-->
     <script src="test.js">
     </script>
