--- a/js-basics/index.html
+++ b/js-basics/index.html
@@ -46,8 +46,7 @@
 
     
     <!--linking external js file-->
-    <script src="test.js">
+    <script src="jsbasics.js">
     </script>
 </body>
-
 </html>
