--- a/js-basics/index.html
+++ b/js-basics/index.html
@@ -43,10 +43,14 @@
     </script>
     <!-- function call from external js file-->
     <input type="button" onclick="changeContent()" value="display">
-
+    <br>
+    <p id="de"></p>
+    <input id="age" value="18" />
+    <button onclick="myAge()">Try it</button>
     
     <!--linking external js file-->
     <script src="jsbasics.js">
     </script>
 </body>
+
 </html>
