--- a/js-basics/index.html
+++ b/js-basics/index.html
@@ -49,8 +49,9 @@
     <button onclick="myAge()">Try it</button>
     
     <!--linking external js file-->
-    <script src="jsbasics.js">
+    <script src="jsbasics_week1.js">
     </script>
+    <script src="jsbasics_week2.js"></script>
 </body>
 
 </html>
